# esp32-dcc-controller

./: .clang-format  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  ESP_Millis.h  Kconfig.projbuild  LGFX_ILI9488_S3.hpp  definitions.h  idf_component.yml  lv_conf.h  main.cpp  millis.h  scan.c
main/connection/: dcc_delegate.cpp  dcc_delegate.h  wifi_connection.cpp  wifi_connection.h  wifi_control.cpp  wifi_control.h
main/display/: ConnectDCC.cpp  ConnectDCC.h  DCCConnectListItem.h  DCCEXProtocol.cpp  DCCMenu.cpp  DCCMenu.h  DisplayManager.cpp  DisplayManager.h  FirstScreen.cpp  FirstScreen.h  ListItemBase.h  LvglWrapper.cpp  LvglWrapper.h  ManualCalibration.cpp  ManualCalibration.h  MessageBox.cpp  MessageBox.h  RosterList.cpp  RosterList.h  RosterListItem.h  RotaryListScreenBase.cpp  RotaryListScreenBase.h  RouteList.cpp  RouteList.h  RouteListItem.h  Screen.cpp  Screen.h  TurnTableList.cpp  TurnTableList.h  TurnTableListItem.h  TurnoutList.cpp  TurnoutList.h  TurnoutListItem.h  TurntableList.cpp  TurntableList.h  TurntableListItem.h  WaitingScreen.cpp  WaitingScreen.h  WifiConnectScreen.cpp  WifiConnectScreen.h  (+12 more)
main/images/: CustomImages.c  CustomImages.h  turnoutclosed.c  turnoutopen.c
main/ui/: LvglButton.h  LvglButtonSymbol.h  LvglCheckbox.h  LvglContainer.h  LvglDropdown.h  LvglHorizontalLayout.h  LvglKeyboard.h  LvglLabel.h  LvglListItem.cpp  LvglListItem.h  LvglListView.h  LvglScreen.h  LvglSpinner.h  LvglStyle.h  LvglTabView.h  LvglTextArea.h  LvglTheme.h  LvglVerticalLayout.h  LvglWidget.h  LvglWidgetBase.h  (+3 more)
(+5 files in other folders)
